infrastructure/kubernetes/monitoring/prometheus/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: prometheus
  namespace: monitoring

  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: flashstore
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/part-of: flashstore
    app.kubernetes.io/managed-by: kubectl

  annotations:
    description: "ClusterIP Service for Prometheus"

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: flashstore

  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
