infrastructure/kubernetes/monitoring/prometheus/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: prometheus
  namespace: monitoring

  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: flashstore
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/part-of: flashstore
    app.kubernetes.io/managed-by: kubectl

  annotations:
    description: "Restrict network access to Prometheus"

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus

  policyTypes:
    - Ingress
    - Egress

  ###############################################################
  # Ingress
  ###############################################################

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9090

  ###############################################################
  # Egress
  ###############################################################

  egress:

    # Kubernetes API
    - ports:
        - protocol: TCP
          port: 443

    # DNS
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    # Alertmanager
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9093

    # Grafana
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 3000

    # kube-state-metrics
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080

    # node-exporter
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9100

    # FlashStore Microservices
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: flashstore
      ports:
        - protocol: TCP
          port: 3000 # gateway
        - protocol: TCP
          port: 3001 # user-service
        - protocol: TCP
          port: 3004 # order-service
        - protocol: TCP
          port: 3006 # analytics-service
